--- a/instrucciones.ipynb
+++ b/instrucciones.ipynb
@@ -10,7 +10,7 @@
     "Ejecutar principal.py\n",
     "Se le solicitará al usuario que ingrese una consulta.\n",
     "\n",
-    "Ingresar por ejemplo: \"Dame el promedio de la temperatura de la ciudad de Canta durante el 1er semestre 2025\"\n",
+    "Ingresar por ejemplo: \"Dame el promedio de la temperatura de la ciudad de Canta, Departamento de Lima, país Peru; durante el 1er semestre 2025\"\n",
     "\n"
    ]
   }
